--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "daisyui": "^2.13.5",
     "graphql": "^16.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
