--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "daisyui": "^2.13.5",
     "graphql": "^16.3.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.30.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
